# pokemon-colorscripts-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  install.ps1  install.sh
.github/workflows/: release.yml  update-colorscripts.yml
colorscripts/: abomasnow.txt  abra.txt  absol.txt  accelgor.txt  aegislash.txt  aerodactyl.txt  aggron.txt  aipom.txt  alakazam.txt  alcremie.txt  alomomola.txt  altaria.txt  amaura.txt  ambipom.txt  amoonguss.txt  ampharos.txt  anorith.txt  appletun.txt  applin.txt  araquanid.txt  arbok.txt  arcanine.txt  arceus.txt  archen.txt  archeops.txt  arctovish.txt  arctozolt.txt  ariados.txt  armaldo.txt  aromatisse.txt  aron.txt  arrokuda.txt  articuno.txt  audino.txt  aurorus.txt  avalugg.txt  axew.txt  azelf.txt  azumarill.txt  azurill.txt  (+858 more)
scripts/: test.sh
src/: main.rs
stats/: abomasnow.txt  abra.txt  absol.txt  accelgor.txt  aegislash.txt  aerodactyl.txt  aggron.txt  aipom.txt  alakazam.txt  alcremie.txt  alomomola.txt  altaria.txt  amaura.txt  ambipom.txt  amoonguss.txt  ampharos.txt  annihilape.txt  anorith.txt  appletun.txt  applin.txt  araquanid.txt  arbok.txt  arboliva.txt  arcanine.txt  arceus.txt  archaludon.txt  archen.txt  archeops.txt  arctibax.txt  arctovish.txt  arctozolt.txt  ariados.txt  armaldo.txt  armarouge.txt  aromatisse.txt  aron.txt  arrokuda.txt  articuno.txt  audino.txt  aurorus.txt  (+985 more)
